removed visible class fixed JS

--- a/Tooltip/static/styles/tooltipStyles.css
+++ b/Tooltip/static/styles/tooltipStyles.css
@@ -1,7 +1,3 @@
-.tooltip>element {
-    /* Affect only direct children of tooltip class */
-}
-
 .tooltip {
     position: relative;
     cursor: pointer;
@@ -13,13 +9,9 @@
     color: #fff;
     padding: 5px;
     border-radius: 5px;
-    display: none;
+    display: block;
 }
 
 .hidden {
     display: none;
-}
-
-.visible {
-    display: block;
 }
